<resources>
    <string name="app_name">Business-Card-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BusinessCardApp</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Anasayfa</string>
    <string name="menu_gallery">Aile</string>
    <string name="menu_slideshow">Okul</string>
    <string name="menu_is">İş</string>
    <string name="menu_arkadas">Arkadaslar</string>
</resources>