<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_is"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.business_card_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_family"
        android:name="com.example.business_card_app.ui.family.FamilyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_family" />

    <fragment
        android:id="@+id/nav_school"
        android:name="com.example.business_card_app.ui.schoolshow.SchollFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_schoolshow" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.business_card_app.ui.business.Business"
        android:label="@string/menu_is"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.business_card_app.ui.friends.Friends"
        android:label="@string/menu_arkadas"
        tools:layout="@layout/fragment_friends" />

</navigation>